--- a/data-sim/pom.xml
+++ b/data-sim/pom.xml
@@ -10,6 +10,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
+		<dependency>
+			<groupId>net.objecthunter</groupId>
+			<artifactId>exp4j</artifactId>
+			<version>0.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
